--- a/index.html
+++ b/index.html
@@ -5,35 +5,68 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Interactive pricing component</title>
+  <link rel="stylesheet" href="/style.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Simple, traffic-based pricing
-  Sign-up for our 30-day trial. No credit card required. 
+  <main class="container">
+    <header>
+      <h1>Simple, traffic-based pricing</h1>
+      <p>Sign-up for our 30-day trail. No credit card required</p>
+    </header>
 
-  Pageviews
-  $ /month
+    <aside>
+      <!--price bar monthly-->
+      <div class="tarrif">
+        <div class="page-views"><span>100K</span> pageviews
+        </div>
 
-  Monthly Billing
-  Yearly Billing 25% discount
+        <div class="price">
+          <span>$ <span class="pricefix">16</span>.00</span>
+          <span class="month">/month</span>
+        </div>
+      </div>
 
-  Unlimited websites
-  100% data ownership
-  Email reports
+      <!--progress bar-->
+        <div class="progress">
+          <div class="progress-bar">
+            <input type="range" min="1" max="5" step="1" value="3" class="myrange">
+          </div>
 
-  Start my trial
+          <!--switch-->
+          <div class="monthly">
+            <span>Monthly Billing</span>
+            <label class="switch">
+              <input type="checkbox">
+              <span class="slider"></span>
+            </label>
+            <span>Yearly Billing</span>
+            <span class="discount">25% discount</span>
+          </div>
+
+        </div>
+
+        <hr>
+
+        <!--Features-->
+        <div class="start">
+          <ul>
+            <li>Unlimited websites</li>
+            <li>100% data ownership</li>
+            <li>Email reports</li>
+          </ul>
+
+          <button>Start my trial</button>
+        </div>
+    </aside>
+  </main>
+
+  <script src="app.js"></script>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
